Bug 1187764: Abort synchronization if our device has gone away. r=jrmuizel a=ritu